# get_target_point

./: README.md  package.xml  setup.cfg  setup.py
assets/checkpoint/: epoch_3.pth
assets/common/: utils.py
assets/configs/: args.py
get_target_point/: action_recogintion.py  async_target_point.py  target_point.py
launch/: gesture_send_goal_point.launch.py  send_goal_point.launch.py
utils/: calculate_target_point.py  goal.txt  socket.py
